Food and drinks -> food and drink

--- a/questions/index.htm
+++ b/questions/index.htm
@@ -99,7 +99,7 @@
 <tr>
   <td>Politics</td>
   <td>Miscellaneous</td>
-  <td>Food and Drinks</td>
+  <td>Food and Drink</td>
 </tr>
 <tr>
   <td>Alcohol</td>
