Updates question guidelines

--- a/questions/index.htm
+++ b/questions/index.htm
@@ -46,8 +46,9 @@
 <li>Proposed questions should be appropriate for all audiences and interesting.</li>
 <li>Avoid long questions.</li>
 <li>Each question should be verifiable. There should be evidence for the question online.</li>
+<li>Questions will ideally be unambiguous without hints (or have all acceptable answer at alternate answers). Please avoid questions like "Name that dog breed: ______"</li>
 <li>Questions with fill-in-the-blanks should use the standard of five underscores, "_____" (without quotations).</li>
-<li>KAOS need to have at least 10 answers, preferably only 10.
+<li>KAOS need to have at least 10 answers for a bonus to be given. Preferably limit kaos to only 10 answer, but more or less may still be fine.
 </ul>
 <p>If you see a question that is not up to par to our expectations, please either report it, edit it, or delete it (if it can't be salvaged by editing).</p>
 <p>The following are the categories we would like to sort our questions into. Please edit questions accordingly. If you think another category is needed, let us know in #trivialand-ops!</p>
