Add quick jump id to categories

--- a/questions/index.htm
+++ b/questions/index.htm
@@ -53,7 +53,7 @@
 </ul>
 <p>If you see a question that is not up to par to our expectations, please either report it, edit it, or delete it (if it can't be salvaged by editing).</p>
 <p>The following are the categories we would like to sort our questions into. Please edit questions accordingly. If you think another category is needed, let us know in #trivialand-ops!</p>
-<table style="width:500px align:center">
+<table style="width:500px align:center" id="categories">
 <tr>
   <td>Music</td>
   <td>People</td>
