Updating some data and fixed many dead links

--- a/cloaks/index.htm
+++ b/cloaks/index.htm
@@ -11,7 +11,6 @@
 <style id="jetpack-widgets-css" media="all">.jetpack-image-container:after{clear:both}.jetpack-image-container:before,.jetpack-image-container:after{display:table;content:""}</style>
 
 
-
 <link rel="stylesheet" type="text/css" id="gravatar-card-css" href="./Cloaks_style/hovercard.css"><link rel="stylesheet" type="text/css" id="gravatar-card-services-css" href="./Cloaks   Trivialand_files/services.css"></head>
 <body class="page page-id-10 page-template-default singular two-column right-sidebar">
 <div id="page" class="hfeed">
@@ -37,14 +36,14 @@
 <h1>Cloak Perks:</h1>
 <ul>
 <li>Automatic channel voice</li>
-<li>Hides your IP. Please note that cloaks do not provide perfect secrcy for your IP address</li>
+<li>Hides your IP. Please note that cloaks do not provide perfect secrecy for your IP address</li>
 <li>Recognized as an established channel member</li>
 <li>Bragging rights</li>
 <li>Promotes our channel</li>
 <li>Prove to others how smart you are</li>
 </ul>
 <h1>Cloaks available:</h1>
-<p>The following cloaks are available to all players. As you gain more points, you unlock more cloaks to choose from. However, you can still choose lower level cloaks. Cloaks with an asterisk require you to be <a title="Register" href="http://trivialand.org/register/">registered</a> with Glime. All cloaks require being <a href="http://freenode.net/faq.shtml#nicksetup">registered</a> on Freenode. Points refer to Year Over Year points, meaning all the points you have earned in the past few years. You will need to contact an op to get this number.</p>
+<p>The following cloaks are available to all players. As you gain more points, you unlock more cloaks to choose from. However, you can still choose lower level cloaks. Cloaks with an asterisk require you to be <a title="Register" href="http://trivialand.org/register/">registered</a> with Glime. All cloaks require being <a href="http://freenode.net/faq.shtml#nicksetup">registered</a> on Freenode. Points refer to Year Over Year points, meaning all the points you have earned in the past few years. You will need to contact WereSquirrel to get this number.</p>
 <ul>
 <li>Over 6 million – choose your own category!*</li>
 <li>trivialand/nick – over 4.5 million points required*</li>
@@ -66,8 +65,7 @@
 <li>trivialand/<strong>developer</strong>/nick – Contributed code to the <a title="TriviaTime" href="http://trivialand.org/triviatime/">TriviaTime</a> project</li>
 <li>Dual cloaks are available to players who have been around for at least three months.</li>
 </ul>
-<p>If you’re interested in a cloak, please fill out the form below.</p>
-<p>Survey currently unavailable. Please contact tann.</p>
+<p>If you’re interested in a cloak, please contact WereSquirrel in #trivialand-ops</p>
 <h1>Expectations:</h1>
 <p style="padding-left: 30px;">All cloak wearers are expected to follow the <a title="Guidelines" href="http://trivialand.org/guidelines/">Cloak Guidelines</a>. Those who don't may have their cloak stripped with or without notice.</p>
 </div><!-- .entry-content -->
