--- a/faq/index.htm
+++ b/faq/index.htm
@@ -46,11 +46,11 @@
 <h1>Can I keep my score if I change my nickname?</h1>
 <p>Yes, however you must <a title="Register" href="../register/">register</a> first. Once you are registered, remain identified to Glime as you change nicknames.</p>
 <h1>Who do I contact when there is a problem in the channel?</h1>
-<p>Join <a href="irc://chat.freenode.net/trivialand-ops">#trivialand-ops</a> and ping all of the voiced users. If you do not get a reply within a few minutes, send a memo to tann. <em>For more information about sending memos, see <a href="http://freenode.net/faq.shtml#memoserv">here</a>.</em></p>
+<p>Join <a href="irc://chat.freenode.net/trivialand-ops">#trivialand-ops</a> and ping all of the voiced users. If you do not get a reply within a few minutes, make sure you leave enough information to take the appropriate action</p>
 <h1>What is a KAOS question?</h1>
 <p>A KAOS question required more than one answer for the question. For example, if the question was “Popular IRC Networks, Ten Possible Answers”, you would need to answer with ten IRC networks (each in a new line) to complete the question.</p>
 <h1>How do I get a bonus for KAOS questions?</h1>
-<p>After all of the answers have been said, a bonus will be given to everyone who answered. If nobody gets a bonus, the question had less than ten answers and wasn’t eligible for a bonus. If you were the only one who gave the answers, no bonus will be given.</p>
+<p>After all of the answers have been said, a bonus will be given to everyone who answered. If nobody gets a bonus, the question had less than ten answers and wasn’t eligible for a bonus. KAOS also requires more than one person to answer in order to recieve the bonus</p>
 <h1>How do I get a cloak?</h1>
 <p>Visit <a title="Cloaks" href="../cloaks/">this page</a> to see if you qualify for a cloak and follow the directions to get one there.</p>
 <h1>How many questions are there?</h1>
