--- a/contribute/index.htm
+++ b/contribute/index.htm
@@ -39,7 +39,7 @@
 <p>Contributing to Trivialand is a great way to make the experience better for everyone involved. I get asked a lot by players as to how they can help out, but they don’t even realize they already are! Here are some ways you can help us out, too.</p>
 <ul>
 <li><strong>Report questions.</strong> This is the best way to contribute. By reporting questions, you create a better experience for the rest of the players.</li>
-<li><strong>Report problems.</strong> Sometimes problems come up. Glime screws up, the channel is being attacked by aliens, or somebody is cheating. Reporting these issues makes you the channel hero for the day.</li>
+<li><strong>Report problems.</strong> Sometimes problems come up. Glime screws up, the channel is being attacked by dingos, or somebody is cheating. Reporting these issues makes you the channel hero for the day.</li>
 <li><strong><a href="../questions/#add">Add questions</a>.</strong> You will enhance the quality and quantity of our questions. Different and new questions create a unique and enjoyable channel atmosphere. New questions and KAOS can be submitted at anytime.</li>
 <li><strong><a href="../questions/#fix">Fix reported questions</a>.</strong> Hundreds of questions have been reported and can cause a lot of strain on staff to fix them in a timely manner. Help us out and you’ll be doing everyone a favor!
 <li><strong>Be involved.</strong> Sometimes we’ll host polls, surveys, and other fun stuff for the community. By getting involved, you contribute to an entertaining environment.</li>
