--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 </div><!-- #content -->
 </div><!-- #primary -->
 <div id="secondary" class="widget-area" role="complementary">
-<aside id="text-2" class="widget widget_text"><h3 class="widget-title">Play Trivia!</h3>	<div class="textwidget">You can connect to <a href="irc://chat.freenode.net/trivialand">chat.freenode.net and join #trivialand</a> or click the following link to play in your web browser. <a href="http://play.trivialand.org/">Play now.</a></div>
+<aside id="text-2" class="widget widget_text"><h3 class="widget-title">Play Trivia!</h3>	<div class="textwidget">You can connect to <a href="irc://chat.freenode.net/trivialand">chat.freenode.net and join #trivialand</a> or use your preferred web client</div>
 </aside>	</div><!-- #secondary .widget-area -->
 </div><!-- #main -->
 
